feat/add_swager_and_change_variable_name
